--- a/SSWEProject/SSWELib/SSWELib.vcxproj
+++ b/SSWEProject/SSWELib/SSWELib.vcxproj
@@ -260,6 +260,7 @@ copy "$(OutDir)$(TargetName)$(TargetExt)" "$(SolutionDir)SSWETests\Output\$(Targ
     <ClCompile Include="SSWELib\Renders\XEffect\Interfaces\CUIWindowEditMaterialsCallback.cpp" />
     <ClCompile Include="SSWELib\SceneNodes\Animators\CCameraFPS360Controller.cpp" />
     <ClCompile Include="SSWELib\SceneNodes\Animators\CRotationAnimator.cpp" />
+    <ClCompile Include="SSWELib\SceneNodes\Camera\CEditorCamera.cpp" />
     <ClCompile Include="SSWELib\SceneNodes\Camera\CRiggedCamera.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
     </ClCompile>
@@ -400,6 +401,7 @@ copy "$(OutDir)$(TargetName)$(TargetExt)" "$(SolutionDir)SSWETests\Output\$(Targ
     <ClInclude Include="SSWELib\SceneNodes\Animators\CCameraFPS360Controller.h" />
     <ClInclude Include="SSWELib\SceneNodes\Animators\CRotationAnimator.h" />
     <ClInclude Include="SSWELib\SceneNodes\Animators\ISceneNodeAnimatorFinishing.h" />
+    <ClInclude Include="SSWELib\SceneNodes\Camera\CEditorCamera.h" />
     <ClInclude Include="SSWELib\SceneNodes\Camera\CRiggedCamera.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
     </ClInclude>
