--- a/SSWEProject/SSWELib/SSWELib/SSWELib.cbp
+++ b/SSWEProject/SSWELib/SSWELib/SSWELib.cbp
@@ -14,8 +14,12 @@
 				<Option compiler="gcc" />
 				<Option createDefFile="1" />
 				<Compiler>
+					<Add option="-std=c++11" />
 					<Add option="-Wall" />
 					<Add option="-g" />
+					<Add option="-W" />
+					<Add option="-O0" />
+					<Add option="-Wno-unused-parameter" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
@@ -26,17 +30,268 @@
 				<Option compiler="gcc" />
 				<Option createDefFile="1" />
 				<Compiler>
-					<Add option="-Wall" />
 					<Add option="-O2" />
+					<Add option="-std=c++11" />
+					<Add option="-Wall" />
+					<Add option="-W" />
+					<Add option="-O0" />
+					<Add option="-Wno-unused-parameter" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
 				</Linker>
 			</Target>
 		</Build>
-		<Unit filename="main.c">
-			<Option compilerVar="CC" />
-		</Unit>
+		<Compiler>
+			<Add option="-std=c++11" />
+			<Add option="-W" />
+			<Add option="-O0" />
+			<Add option="-Wno-unused-parameter" />
+			<Add option="-DSSWE_EDITOR" />
+			<Add option="-D_IRR_STATIC_LIB_" />
+			<Add directory="../../SSWELib" />
+			<Add directory="../../SPARK/SPARK155/include" />
+			<Add directory="../../SSWERenders" />
+			<Add directory="../../Bullet/bullet-2.81-rev2613" />
+			<Add directory="../../Bullet/bullet-2.81-rev2613/src" />
+			<Add directory="../../SSWECore" />
+			<Add directory="../../../../irrlicht-1.8.1/include" />
+			<Add directory="../include" />
+			<Add directory="../../irrBullet/source" />
+			<Add directory="../../irrBullet/source/bheaders" />
+		</Compiler>
+		<Linker>
+			<Add directory="../../irrBullet/lib/linux/Debug" />
+			<Add directory="../../SSWERenders/SSWERenders" />
+			<Add directory="../../SSWECore/SSWECore" />
+			<Add directory="../../../../irrlicht-1.8.1/lib/Linux" />
+		</Linker>
+		<Unit filename="../SSWELib.cpp" />
+		<Unit filename="../SSWELib.h" />
+		<Unit filename="../stdafx.cpp" />
+		<Unit filename="../stdafx.h" />
+		<Unit filename="CharacterEdition/CAction.cpp" />
+		<Unit filename="CharacterEdition/CAction.h" />
+		<Unit filename="CharacterEdition/CUICharacterManager.cpp" />
+		<Unit filename="CharacterEdition/CUICharacterManager.h" />
+		<Unit filename="CharacterEdition/CUICharacterWindow.cpp" />
+		<Unit filename="CharacterEdition/CUICharacterWindow.h" />
+		<Unit filename="CharacterEdition/CUIEditBones.cpp" />
+		<Unit filename="CharacterEdition/CUIEditBones.h" />
+		<Unit filename="CharacterEdition/ManualAnimation/CAnimation.cpp" />
+		<Unit filename="CharacterEdition/ManualAnimation/CAnimation.h" />
+		<Unit filename="CharacterEdition/ManualAnimation/CFrame.cpp" />
+		<Unit filename="CharacterEdition/ManualAnimation/CFrame.h" />
+		<Unit filename="CharacterEdition/ManualAnimation/CManualAction.cpp" />
+		<Unit filename="CharacterEdition/ManualAnimation/CManualAction.h" />
+		<Unit filename="Device/CDevices.cpp" />
+		<Unit filename="Device/CDevices.h" />
+		<Unit filename="Device/Controllers/CAnimationController.cpp" />
+		<Unit filename="Device/Controllers/CAnimationController.h" />
+		<Unit filename="Device/Core/CCoreUserInterface.cpp" />
+		<Unit filename="Device/Core/CCoreUserInterface.h" />
+		<Unit filename="Device/Core/CRenderCore.cpp" />
+		<Unit filename="Device/Core/CRenderCore.h" />
+		<Unit filename="Device/Core/ParticleSystems/CParticleSystemsImporter.cpp" />
+		<Unit filename="Device/Core/ParticleSystems/CParticleSystemsImporter.h" />
+		<Unit filename="Device/Core/ParticleSystems/CParticleSystemsTypes.h" />
+		<Unit filename="Device/Core/Scripting/CFileSystemScripting.cpp" />
+		<Unit filename="Device/Core/Scripting/CFileSystemScripting.h" />
+		<Unit filename="Device/Core/Scripting/CLuaBinds.cpp" />
+		<Unit filename="Device/Core/Scripting/CLuaBinds.h" />
+		<Unit filename="Device/Core/Scripting/CSceneScripting.cpp" />
+		<Unit filename="Device/Core/Scripting/CSceneScripting.h" />
+		<Unit filename="Device/Core/Scripting/CUIScriptEditor.cpp" />
+		<Unit filename="Device/Core/Scripting/CUIScriptEditor.h" />
+		<Unit filename="Device/Core/Scripting/math/CVector3d.cpp" />
+		<Unit filename="Device/Core/Scripting/math/CVector3d.h" />
+		<Unit filename="Device/Monitor/MonitorRegister.cpp" />
+		<Unit filename="Device/Monitor/MonitorRegister.h" />
+		<Unit filename="GUIExtension/CodeEditor/CGUICodeEditor.cpp" />
+		<Unit filename="GUIExtension/CodeEditor/CGUICodeEditor.h" />
+		<Unit filename="GUIExtension/FileLoader/CUIFileLoader.cpp" />
+		<Unit filename="GUIExtension/FileLoader/CUIFileLoader.h" />
+		<Unit filename="GUIExtension/FileSelector/CGUIFileSelector.cpp" />
+		<Unit filename="GUIExtension/FileSelector/CGUIFileSelector.h" />
+		<Unit filename="GUIExtension/Graph2D/GraphKat.cpp" />
+		<Unit filename="GUIExtension/Graph2D/GraphKat.h" />
+		<Unit filename="GUIExtension/NodesEditor/CGUINode.cpp" />
+		<Unit filename="GUIExtension/NodesEditor/CGUINode.h" />
+		<Unit filename="GUIExtension/NodesEditor/CGUINodesEditor.cpp" />
+		<Unit filename="GUIExtension/NodesEditor/CGUINodesEditor.h" />
+		<Unit filename="GUIExtension/ProgressBar/ProgressBar.cpp" />
+		<Unit filename="GUIExtension/ProgressBar/ProgressBar.h" />
+		<Unit filename="GUIExtension/TimeLine/CGUITimeLine.cpp" />
+		<Unit filename="GUIExtension/TimeLine/CGUITimeLine.h" />
+		<Unit filename="GUIExtension/ViewPort/CGUIViewPort.cpp" />
+		<Unit filename="GUIExtension/ViewPort/CGUIViewPort.h" />
+		<Unit filename="GUIExtension/ViewPort/IGUIViewPort.h" />
+		<Unit filename="Renders/DepthOfField/CUIWindowEditDOF.cpp" />
+		<Unit filename="Renders/DepthOfField/CUIWindowEditDOF.h" />
+		<Unit filename="Renders/XEffect/Interfaces/CFilterCallback.cpp" />
+		<Unit filename="Renders/XEffect/Interfaces/CFilterCallback.h" />
+		<Unit filename="Renders/XEffect/Interfaces/CShaderCallback.cpp" />
+		<Unit filename="Renders/XEffect/Interfaces/CShaderCallback.h" />
+		<Unit filename="Renders/XEffect/Interfaces/CUIWindowEditFilters.cpp" />
+		<Unit filename="Renders/XEffect/Interfaces/CUIWindowEditFilters.h" />
+		<Unit filename="Renders/XEffect/Interfaces/CUIWindowEditMaterials.cpp" />
+		<Unit filename="Renders/XEffect/Interfaces/CUIWindowEditMaterials.h" />
+		<Unit filename="Renders/XEffect/Interfaces/CUIWindowEditMaterialsCallback.cpp" />
+		<Unit filename="Renders/XEffect/Interfaces/CUIWindowEditMaterialsCallback.h" />
+		<Unit filename="SceneNodes/Animators/CCameraFPS360Controller.cpp" />
+		<Unit filename="SceneNodes/Animators/CCameraFPS360Controller.h" />
+		<Unit filename="SceneNodes/Animators/CRotationAnimator.cpp" />
+		<Unit filename="SceneNodes/Animators/CRotationAnimator.h" />
+		<Unit filename="SceneNodes/Animators/ISceneNodeAnimatorFinishing.h" />
+		<Unit filename="SceneNodes/Camera/CEditorCamera.cpp" />
+		<Unit filename="SceneNodes/Camera/CEditorCamera.h" />
+		<Unit filename="SceneNodes/Camera/CRiggedCamera.cpp" />
+		<Unit filename="SceneNodes/Camera/CRiggedCamera.h" />
+		<Unit filename="SceneNodes/Camera/CSceneNodeAnimatorCameraUpVector.h" />
+		<Unit filename="SceneNodes/Clouds/CloudSceneNode.cpp" />
+		<Unit filename="SceneNodes/Clouds/CloudSceneNode.h" />
+		<Unit filename="SceneNodes/LensFlareSceneNode.cpp" />
+		<Unit filename="SceneNodes/LensFlareSceneNode.h" />
+		<Unit filename="SceneNodes/SceneNodeAnimatorFollowCamera.cpp" />
+		<Unit filename="SceneNodes/SceneNodeAnimatorFollowCamera.h" />
+		<Unit filename="SceneNodes/TerrainSystem/CTerrainSystem.cpp" />
+		<Unit filename="SceneNodes/TerrainSystem/CTerrainSystem.h" />
+		<Unit filename="SceneNodes/Terrains/CTerrain.cpp" />
+		<Unit filename="SceneNodes/Terrains/CTerrain.h" />
+		<Unit filename="SceneNodes/Terrains/CTerrainPager.cpp" />
+		<Unit filename="SceneNodes/Terrains/CTerrainPager.h" />
+		<Unit filename="SceneNodes/WaterSurface/CWaterSurface.cpp" />
+		<Unit filename="SceneNodes/WaterSurface/CWaterSurface.h" />
+		<Unit filename="SceneNodes/WaterSurface/RealisticWater.cpp" />
+		<Unit filename="SceneNodes/WaterSurface/RealisticWater.h" />
+		<Unit filename="Scenes/CExporter.cpp" />
+		<Unit filename="Scenes/CExporter.h" />
+		<Unit filename="Scenes/CImporter.cpp" />
+		<Unit filename="Scenes/CImporter.h" />
+		<Unit filename="UserInterfaces/AnimatorsEditor/CUIEditFPSCamera.cpp" />
+		<Unit filename="UserInterfaces/AnimatorsEditor/CUIEditFPSCamera.h" />
+		<Unit filename="UserInterfaces/AnimatorsEditor/CUIWindowEditNodeAnimators.cpp" />
+		<Unit filename="UserInterfaces/AnimatorsEditor/CUIWindowEditNodeAnimators.h" />
+		<Unit filename="UserInterfaces/AnimatorsEditor/CameraScenarioMaker/CUICameraScenerioMaker.cpp" />
+		<Unit filename="UserInterfaces/AnimatorsEditor/CameraScenarioMaker/CUICameraScenerioMaker.h" />
+		<Unit filename="UserInterfaces/CUILoadNodesGroup.cpp" />
+		<Unit filename="UserInterfaces/CUILoadNodesGroup.h" />
+		<Unit filename="UserInterfaces/CUIRenderingInfos.cpp" />
+		<Unit filename="UserInterfaces/CUIRenderingInfos.h" />
+		<Unit filename="UserInterfaces/CUIRightSceneTreeView.cpp" />
+		<Unit filename="UserInterfaces/CUIRightSceneTreeView.h" />
+		<Unit filename="UserInterfaces/CUISceneView.cpp" />
+		<Unit filename="UserInterfaces/CUISceneView.h" />
+		<Unit filename="UserInterfaces/CUIWindowEditGrid.cpp" />
+		<Unit filename="UserInterfaces/CUIWindowEditGrid.h" />
+		<Unit filename="UserInterfaces/CUIWindowEditLight.cpp" />
+		<Unit filename="UserInterfaces/CUIWindowEditLight.h" />
+		<Unit filename="UserInterfaces/CUIWindowEditNode.cpp" />
+		<Unit filename="UserInterfaces/CUIWindowEditNode.h" />
+		<Unit filename="UserInterfaces/CUIWindowEditVolumeLight.cpp" />
+		<Unit filename="UserInterfaces/CUIWindowEditVolumeLight.h" />
+		<Unit filename="UserInterfaces/CUIWindowEditWater.cpp" />
+		<Unit filename="UserInterfaces/CUIWindowEditWater.h" />
+		<Unit filename="UserInterfaces/CUIWindowExportScene.cpp" />
+		<Unit filename="UserInterfaces/CUIWindowExportScene.h" />
+		<Unit filename="UserInterfaces/CUIWindowOpenScene.cpp" />
+		<Unit filename="UserInterfaces/CUIWindowOpenScene.h" />
+		<Unit filename="UserInterfaces/CUIWindowsManager.cpp" />
+		<Unit filename="UserInterfaces/CUIWindowsManager.h" />
+		<Unit filename="UserInterfaces/CodeEditor/CUICodeEditor.cpp" />
+		<Unit filename="UserInterfaces/CodeEditor/CUICodeEditor.h" />
+		<Unit filename="UserInterfaces/MainWindow/CUIWindowAddLight.cpp" />
+		<Unit filename="UserInterfaces/MainWindow/CUIWindowAddLight.h" />
+		<Unit filename="UserInterfaces/MainWindow/CUIWindowAddObject.cpp" />
+		<Unit filename="UserInterfaces/MainWindow/CUIWindowAddObject.h" />
+		<Unit filename="UserInterfaces/MainWindow/CUIWindowAddTerrain.cpp" />
+		<Unit filename="UserInterfaces/MainWindow/CUIWindowAddTerrain.h" />
+		<Unit filename="UserInterfaces/MainWindow/CUIWindowAddTree.cpp" />
+		<Unit filename="UserInterfaces/MainWindow/CUIWindowAddTree.h" />
+		<Unit filename="UserInterfaces/MainWindow/CUIWindowAddVolumeLight.cpp" />
+		<Unit filename="UserInterfaces/MainWindow/CUIWindowAddVolumeLight.h" />
+		<Unit filename="UserInterfaces/MainWindow/CUIWindowAddWatersSurface.cpp" />
+		<Unit filename="UserInterfaces/MainWindow/CUIWindowAddWatersSurface.h" />
+		<Unit filename="UserInterfaces/MainWindow/UIMainWindow.cpp" />
+		<Unit filename="UserInterfaces/MainWindow/UIMainWindow.h" />
+		<Unit filename="UserInterfaces/MaterialEditor/CMaterialEditorFactory.cpp" />
+		<Unit filename="UserInterfaces/MaterialEditor/CMaterialEditorFactory.h" />
+		<Unit filename="UserInterfaces/MaterialEditor/CUIMaterialEditor.cpp" />
+		<Unit filename="UserInterfaces/MaterialEditor/CUIMaterialEditor.h" />
+		<Unit filename="UserInterfaces/MaterialEditor/General/CUIMaterialEditorColors.cpp" />
+		<Unit filename="UserInterfaces/MaterialEditor/General/CUIMaterialEditorColors.h" />
+		<Unit filename="UserInterfaces/MaterialEditor/General/CUIMaterialEditorFlags.cpp" />
+		<Unit filename="UserInterfaces/MaterialEditor/General/CUIMaterialEditorFlags.h" />
+		<Unit filename="UserInterfaces/MaterialEditor/General/CUIMaterialEditorTextures.cpp" />
+		<Unit filename="UserInterfaces/MaterialEditor/General/CUIMaterialEditorTextures.h" />
+		<Unit filename="UserInterfaces/MeshFactory/CMeshFactory.cpp" />
+		<Unit filename="UserInterfaces/MeshFactory/CMeshFactory.h" />
+		<Unit filename="UserInterfaces/MeshFactory/CUIAnimatedMeshViewer.cpp" />
+		<Unit filename="UserInterfaces/MeshFactory/CUIAnimatedMeshViewer.h" />
+		<Unit filename="UserInterfaces/MeshFactory/CUIMeshFactory.cpp" />
+		<Unit filename="UserInterfaces/MeshFactory/CUIMeshFactory.h" />
+		<Unit filename="UserInterfaces/NodeFactory/CNodeFactory.cpp" />
+		<Unit filename="UserInterfaces/NodeFactory/CNodeFactory.h" />
+		<Unit filename="UserInterfaces/NodeFactory/CUINodeFactoryCreateMeshWithTangents.cpp" />
+		<Unit filename="UserInterfaces/NodeFactory/CUINodeFactoryCreateMeshWithTangents.h" />
+		<Unit filename="UserInterfaces/NodeFactory/CUINodeFactoryPlanarMapping.cpp" />
+		<Unit filename="UserInterfaces/NodeFactory/CUINodeFactoryPlanarMapping.h" />
+		<Unit filename="UserInterfaces/NodeFactory/CUIWindowAddNewTerrain.cpp" />
+		<Unit filename="UserInterfaces/NodeFactory/CUIWindowAddNewTerrain.h" />
+		<Unit filename="UserInterfaces/NodeFactory/CUIWindowEditClouds.cpp" />
+		<Unit filename="UserInterfaces/NodeFactory/CUIWindowEditClouds.h" />
+		<Unit filename="UserInterfaces/NodeFactory/TerrainPainting/CGrassPainter.cpp" />
+		<Unit filename="UserInterfaces/NodeFactory/TerrainPainting/CGrassPainter.h" />
+		<Unit filename="UserInterfaces/NodeFactory/TerrainPainting/CTerrainPainter.cpp" />
+		<Unit filename="UserInterfaces/NodeFactory/TerrainPainting/CTerrainPainter.h" />
+		<Unit filename="UserInterfaces/NodeFactory/TerrainPainting/CUITerrainPainting.cpp" />
+		<Unit filename="UserInterfaces/NodeFactory/TerrainPainting/CUITerrainPainting.h" />
+		<Unit filename="UserInterfaces/Options/CUISSWEOptions.cpp" />
+		<Unit filename="UserInterfaces/Options/CUISSWEOptions.h" />
+		<Unit filename="UserInterfaces/ParticlesEditor/CUIAddEmitter.cpp" />
+		<Unit filename="UserInterfaces/ParticlesEditor/CUIAddEmitter.h" />
+		<Unit filename="UserInterfaces/ParticlesEditor/CUIAddModifier.cpp" />
+		<Unit filename="UserInterfaces/ParticlesEditor/CUIAddModifier.h" />
+		<Unit filename="UserInterfaces/ParticlesEditor/CUIEditParticleFlags.cpp" />
+		<Unit filename="UserInterfaces/ParticlesEditor/CUIEditParticleFlags.h" />
+		<Unit filename="UserInterfaces/ParticlesEditor/CUIEditParticleInterpolators.cpp" />
+		<Unit filename="UserInterfaces/ParticlesEditor/CUIEditParticleInterpolators.h" />
+		<Unit filename="UserInterfaces/ParticlesEditor/CUIParticleEditor.cpp" />
+		<Unit filename="UserInterfaces/ParticlesEditor/CUIParticleEditor.h" />
+		<Unit filename="UserInterfaces/ParticlesEditor/CUIParticleExport.cpp" />
+		<Unit filename="UserInterfaces/ParticlesEditor/CUIParticleExport.h" />
+		<Unit filename="UserInterfaces/ParticlesEditor/CUIParticlesEditZone.cpp" />
+		<Unit filename="UserInterfaces/ParticlesEditor/CUIParticlesEditZone.h" />
+		<Unit filename="UserInterfaces/ParticlesEditor/CUIParticlesEditor.cpp" />
+		<Unit filename="UserInterfaces/ParticlesEditor/CUIParticlesEditor.h" />
+		<Unit filename="UserInterfaces/PluginsManager/CPluginsManager.cpp" />
+		<Unit filename="UserInterfaces/PluginsManager/CPluginsManager.h" />
+		<Unit filename="UserInterfaces/PluginsManager/CUIPluginsManager.cpp" />
+		<Unit filename="UserInterfaces/PluginsManager/CUIPluginsManager.h" />
+		<Unit filename="UserInterfaces/ProcessesLogger/CProcess.cpp" />
+		<Unit filename="UserInterfaces/ProcessesLogger/CProcess.h" />
+		<Unit filename="UserInterfaces/ProcessesLogger/CUIProcessesLogger.cpp" />
+		<Unit filename="UserInterfaces/ProcessesLogger/CUIProcessesLogger.h" />
+		<Unit filename="UserInterfaces/Radiosity/CRadiosityGenerator.h" />
+		<Unit filename="UserInterfaces/Radiosity/CUILightMapsCreator.cpp" />
+		<Unit filename="UserInterfaces/Radiosity/CUILightMapsCreator.h" />
+		<Unit filename="UserInterfaces/Radiosity/CUVTree.cpp" />
+		<Unit filename="UserInterfaces/Radiosity/CUVTree.h" />
+		<Unit filename="UserInterfaces/Radiosity/mtrand.cpp" />
+		<Unit filename="UserInterfaces/Radiosity/mtrand.h" />
+		<Unit filename="UserInterfaces/Radiosity/types.h" />
+		<Unit filename="UserInterfaces/ScenarioMaker/CUIScenarioMakerMain.cpp" />
+		<Unit filename="UserInterfaces/ScenarioMaker/CUIScenarioMakerMain.h" />
+		<Unit filename="UserInterfaces/ScenarioMaker/ScenarioObjects/CUIScenarioObjects.cpp" />
+		<Unit filename="UserInterfaces/ScenarioMaker/ScenarioObjects/CUIScenarioObjects.h" />
+		<Unit filename="UserInterfaces/TexturesManager/CUITextureEditor.cpp" />
+		<Unit filename="UserInterfaces/TexturesManager/CUITextureEditor.h" />
+		<Unit filename="UserInterfaces/TexturesManager/CUITexturesManager.cpp" />
+		<Unit filename="UserInterfaces/TexturesManager/CUITexturesManager.h" />
+		<Unit filename="UserInterfaces/UIContextMenu.cpp" />
+		<Unit filename="UserInterfaces/UIContextMenu.h" />
+		<Unit filename="UserInterfaces/UIWindowRender.cpp" />
+		<Unit filename="UserInterfaces/UIWindowRender.h" />
 		<Extensions>
 			<code_completion />
 			<debugger />
