--- a/SSWEProject/SPARK/SPARK155/projects/SPARK155/SPARK155.cbp
+++ b/SSWEProject/SPARK/SPARK155/projects/SPARK155/SPARK155.cbp
@@ -14,7 +14,7 @@
 				<Option compiler="gcc" />
 				<Option createDefFile="1" />
 				<Compiler>
-					<Add option="-Wall" />
+					<Add option="-std=c++11" />
 					<Add option="-g" />
 				</Compiler>
 			</Target>
@@ -26,17 +26,121 @@
 				<Option compiler="gcc" />
 				<Option createDefFile="1" />
 				<Compiler>
-					<Add option="-Wall" />
 					<Add option="-O2" />
+					<Add option="-std=c++11" />
+					<Add option="-Wall" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
 				</Linker>
 			</Target>
 		</Build>
-		<Unit filename="main.c">
-			<Option compilerVar="CC" />
-		</Unit>
+		<Compiler>
+			<Add option="-std=c++11" />
+			<Add option="-W" />
+			<Add option="-O0" />
+			<Add option="-Wno-unused-parameter" />
+			<Add option="-D_IRR_STATIC_LIB_" />
+			<Add directory="../../include" />
+			<Add directory="../../../../../../irrlicht-1.8.1/include" />
+		</Compiler>
+		<Linker>
+			<Add library="Xxf86vm" />
+			<Add directory="../../../../../../irrlicht-1.8.1/lib/Linux" />
+		</Linker>
+		<Unit filename="../../include/Core/SPK_ArrayBuffer.h" />
+		<Unit filename="../../include/Core/SPK_Buffer.h" />
+		<Unit filename="../../include/Core/SPK_BufferHandler.h" />
+		<Unit filename="../../include/Core/SPK_DEF.h" />
+		<Unit filename="../../include/Core/SPK_Emitter.h" />
+		<Unit filename="../../include/Core/SPK_Factory.h" />
+		<Unit filename="../../include/Core/SPK_Group.h" />
+		<Unit filename="../../include/Core/SPK_Interpolator.h" />
+		<Unit filename="../../include/Core/SPK_Model.h" />
+		<Unit filename="../../include/Core/SPK_Modifier.h" />
+		<Unit filename="../../include/Core/SPK_Particle.h" />
+		<Unit filename="../../include/Core/SPK_Pool.h" />
+		<Unit filename="../../include/Core/SPK_RegWrapper.h" />
+		<Unit filename="../../include/Core/SPK_Registerable.h" />
+		<Unit filename="../../include/Core/SPK_Renderer.h" />
+		<Unit filename="../../include/Core/SPK_System.h" />
+		<Unit filename="../../include/Core/SPK_Transformable.h" />
+		<Unit filename="../../include/Core/SPK_Vector3D.h" />
+		<Unit filename="../../include/Core/SPK_Zone.h" />
+		<Unit filename="../../include/Extensions/Emitters/SPK_NormalEmitter.h" />
+		<Unit filename="../../include/Extensions/Emitters/SPK_RandomEmitter.h" />
+		<Unit filename="../../include/Extensions/Emitters/SPK_SphericEmitter.h" />
+		<Unit filename="../../include/Extensions/Emitters/SPK_StaticEmitter.h" />
+		<Unit filename="../../include/Extensions/Emitters/SPK_StraightEmitter.h" />
+		<Unit filename="../../include/Extensions/Modifiers/SPK_Collision.h" />
+		<Unit filename="../../include/Extensions/Modifiers/SPK_Destroyer.h" />
+		<Unit filename="../../include/Extensions/Modifiers/SPK_LinearForce.h" />
+		<Unit filename="../../include/Extensions/Modifiers/SPK_ModifierGroup.h" />
+		<Unit filename="../../include/Extensions/Modifiers/SPK_Obstacle.h" />
+		<Unit filename="../../include/Extensions/Modifiers/SPK_PointMass.h" />
+		<Unit filename="../../include/Extensions/Modifiers/SPK_Rotator.h" />
+		<Unit filename="../../include/Extensions/Modifiers/SPK_Vortex.h" />
+		<Unit filename="../../include/Extensions/Renderers/SPK_LineRendererInterface.h" />
+		<Unit filename="../../include/Extensions/Renderers/SPK_Oriented2DRendererInterface.h" />
+		<Unit filename="../../include/Extensions/Renderers/SPK_Oriented3DRendererInterface.h" />
+		<Unit filename="../../include/Extensions/Renderers/SPK_PointRendererInterface.h" />
+		<Unit filename="../../include/Extensions/Renderers/SPK_QuadRendererInterface.h" />
+		<Unit filename="../../include/Extensions/Zones/SPK_AABox.h" />
+		<Unit filename="../../include/Extensions/Zones/SPK_Cylinder.h" />
+		<Unit filename="../../include/Extensions/Zones/SPK_Line.h" />
+		<Unit filename="../../include/Extensions/Zones/SPK_Plane.h" />
+		<Unit filename="../../include/Extensions/Zones/SPK_Point.h" />
+		<Unit filename="../../include/Extensions/Zones/SPK_Ring.h" />
+		<Unit filename="../../include/Extensions/Zones/SPK_Sphere.h" />
+		<Unit filename="../../include/RenderingAPIs/Irrlicht/SPK_IRRBuffer.h" />
+		<Unit filename="../../include/RenderingAPIs/Irrlicht/SPK_IRRLineRenderer.h" />
+		<Unit filename="../../include/RenderingAPIs/Irrlicht/SPK_IRRPointRenderer.h" />
+		<Unit filename="../../include/RenderingAPIs/Irrlicht/SPK_IRRQuadRenderer.h" />
+		<Unit filename="../../include/RenderingAPIs/Irrlicht/SPK_IRRRenderer.h" />
+		<Unit filename="../../include/RenderingAPIs/Irrlicht/SPK_IRRSystem.h" />
+		<Unit filename="../../include/RenderingAPIs/Irrlicht/SPK_IRR_DEF.h" />
+		<Unit filename="../../include/SPK_IRR.h" />
+		<Unit filename="../../src/Core/SPK_BufferHandler.cpp" />
+		<Unit filename="../../src/Core/SPK_DEF.cpp" />
+		<Unit filename="../../src/Core/SPK_Emitter.cpp" />
+		<Unit filename="../../src/Core/SPK_Factory.cpp" />
+		<Unit filename="../../src/Core/SPK_Group.cpp" />
+		<Unit filename="../../src/Core/SPK_Interpolator.cpp" />
+		<Unit filename="../../src/Core/SPK_Model.cpp" />
+		<Unit filename="../../src/Core/SPK_Modifier.cpp" />
+		<Unit filename="../../src/Core/SPK_Particle.cpp" />
+		<Unit filename="../../src/Core/SPK_Registerable.cpp" />
+		<Unit filename="../../src/Core/SPK_Renderer.cpp" />
+		<Unit filename="../../src/Core/SPK_System.cpp" />
+		<Unit filename="../../src/Core/SPK_Transformable.cpp" />
+		<Unit filename="../../src/Core/SPK_Vector3D.cpp" />
+		<Unit filename="../../src/Core/SPK_Zone.cpp" />
+		<Unit filename="../../src/Extensions/Emitters/SPK_NormalEmitter.cpp" />
+		<Unit filename="../../src/Extensions/Emitters/SPK_RandomEmitter.cpp" />
+		<Unit filename="../../src/Extensions/Emitters/SPK_SphericEmitter.cpp" />
+		<Unit filename="../../src/Extensions/Emitters/SPK_StraightEmitter.cpp" />
+		<Unit filename="../../src/Extensions/Modifiers/SPK_Collision.cpp" />
+		<Unit filename="../../src/Extensions/Modifiers/SPK_Destroyer.cpp" />
+		<Unit filename="../../src/Extensions/Modifiers/SPK_LinearForce.cpp" />
+		<Unit filename="../../src/Extensions/Modifiers/SPK_ModifierGroup.cpp" />
+		<Unit filename="../../src/Extensions/Modifiers/SPK_Obstacle.cpp" />
+		<Unit filename="../../src/Extensions/Modifiers/SPK_PointMass.cpp" />
+		<Unit filename="../../src/Extensions/Modifiers/SPK_Vortex.cpp" />
+		<Unit filename="../../src/Extensions/Renderers/SPK_Oriented3DRendererInterface.cpp" />
+		<Unit filename="../../src/Extensions/Renderers/SPK_QuadRendererInterface.cpp" />
+		<Unit filename="../../src/Extensions/Zones/SPK_AABox.cpp" />
+		<Unit filename="../../src/Extensions/Zones/SPK_Cylinder.cpp" />
+		<Unit filename="../../src/Extensions/Zones/SPK_Line.cpp" />
+		<Unit filename="../../src/Extensions/Zones/SPK_Plane.cpp" />
+		<Unit filename="../../src/Extensions/Zones/SPK_Point.cpp" />
+		<Unit filename="../../src/Extensions/Zones/SPK_Ring.cpp" />
+		<Unit filename="../../src/Extensions/Zones/SPK_Sphere.cpp" />
+		<Unit filename="../../src/RenderingAPIs/Irrlicht/SPK_IRRBuffer.cpp" />
+		<Unit filename="../../src/RenderingAPIs/Irrlicht/SPK_IRRLineRenderer.cpp" />
+		<Unit filename="../../src/RenderingAPIs/Irrlicht/SPK_IRRPointRenderer.cpp" />
+		<Unit filename="../../src/RenderingAPIs/Irrlicht/SPK_IRRQuadRenderer.cpp" />
+		<Unit filename="../../src/RenderingAPIs/Irrlicht/SPK_IRRRenderer.cpp" />
+		<Unit filename="../../src/RenderingAPIs/Irrlicht/SPK_IRRSystem.cpp" />
 		<Extensions>
 			<code_completion />
 			<debugger />
