--- a/SSWEProject/SSWE/SSWE/SSWE.cbp
+++ b/SSWEProject/SSWE/SSWE/SSWE.cbp
@@ -7,21 +7,36 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/SSWE" prefix_auto="1" extension_auto="1" />
+				<Option output="../../../SSWE/SSWE" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="../../../SSWE" />
 				<Option object_output="obj/Debug/" />
-				<Option type="1" />
+				<Option type="0" />
 				<Option compiler="gcc" />
 				<Compiler>
+					<Add option="-std=c++11" />
 					<Add option="-g" />
+					<Add option="-fexceptions" />
+					<Add option="-W" />
+					<Add option="-O0" />
+					<Add option="-Wno-unused-parameter" />
+					<Add option="-DSSWE_EDITOR" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/SSWE" prefix_auto="1" extension_auto="1" />
+				<Option output="../../../SSWE/SSWE" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="../../../SSWE" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add option="-std=c++11" />
+					<Add option="-fexceptions" />
+					<Add option="-W" />
+					<Add option="-O0" />
+					<Add option="-Wno-unused-parameter" />
+					<Add option="-Wl" />
+					<Add option="--allow-multiple-definition" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -31,8 +46,48 @@
 		<Compiler>
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
+			<Add option="-W" />
+			<Add option="-O0" />
+			<Add option="-Wno-unused-parameter" />
+			<Add option="-fno-exceptions" />
+			<Add option="-D_IRR_STATIC_LIB_" />
+			<Add directory="../../../../irrlicht-1.8.1/include" />
+			<Add directory="../../SSWELib/include" />
+			<Add directory="../../SSWELib" />
+			<Add directory="../../Bullet/bullet-2.81-rev2613" />
+			<Add directory="../../Bullet/bullet-2.81-rev2613/src" />
+			<Add directory="../../SSWECore" />
+			<Add directory="../../SPARK/SPARK155/include" />
 		</Compiler>
-		<Unit filename="main.cpp" />
+		<Linker>
+			<Add library="SSWELib" />
+			<Add library="SSWECore" />
+			<Add library="SSWERenders" />
+			<Add library="Irrlicht" />
+			<Add library="X11" />
+			<Add library="Xcursor" />
+			<Add library="Xxf86vm" />
+			<Add library="GL" />
+			<Add library="lua" />
+			<Add library="irrBullet" />
+			<Add library="BulletSoftBody" />
+			<Add library="BulletDynamics" />
+			<Add library="BulletCollision" />
+			<Add library="LinearMath" />
+			<Add library="dl" />
+			<Add library="SPARK155" />
+			<Add directory="../../../../irrlicht-1.8.1/lib/Linux" />
+			<Add directory="../../SSWELib/SSWELib" />
+			<Add directory="../../SPARK/SPARK155/projects/SPARK155" />
+			<Add directory="../../SSWECore/SSWECore" />
+			<Add directory="../../SSWERenders/SSWERenders" />
+			<Add directory="../../Bullet/libs" />
+			<Add directory="../../../../lua-5.2.3/src" />
+			<Add directory="../../irrBullet/lib/linux/Release" />
+		</Linker>
+		<Unit filename="../SSWE.cpp" />
+		<Unit filename="../stdafx.cpp" />
+		<Unit filename="../stdafx.h" />
 		<Extensions>
 			<code_completion />
 			<debugger />
