--- a/.gitignore
+++ b/.gitignore
@@ -134,6 +134,7 @@ sources.pro.user
 mingw
 msvc
 SSWEProject/Bullet/bullet-2.81-rev2613/Demos/
+SSWE/SSWE
 Lua
 SSWE/libs/lua52.dll
 SSWE/libs/lua52.lib
