--- a/SSWEProject/SSWE/SSWE/SSWE.cbp
+++ b/SSWEProject/SSWE/SSWE/SSWE.cbp
@@ -10,8 +10,9 @@
 				<Option output="../../../SSWE/SSWE" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="../../../SSWE" />
 				<Option object_output="obj/Debug/" />
-				<Option type="0" />
+				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option use_console_runner="0" />
 				<Compiler>
 					<Add option="-std=c++11" />
 					<Add option="-g" />
